v0.16 avoiding raising exceptions on timeout when they are expected